# ie7374-labs-airflow-labs-lab2

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.sh
dags/: main.py  report_dag.py
dags/src/: model_development.py
